@@ -1,5 +1,10 @@
 2010-11-01  Vladimir Serbinenko  <phcoder@gmail.com>
 
+	* util/grub.d/10_linux.in: Add missing load_video with explicit
+	GRUB_GFXPAYLOAD_LINUX.
+
+2010-11-01  Vladimir Serbinenko  <phcoder@gmail.com>
+
 	* Makefile.am (libgrub.pp): Propagate the libgrub.a split.
 
 2010-11-01  Vladimir Serbinenko  <phcoder@gmail.com>
